--- a/faq.html
+++ b/faq.html
@@ -6,14 +6,16 @@
     <title>Installation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <div class="container">
         <nav>
             <div class="nav-wrapper grey darken-4">
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li><a href="index.html">Main Page</a></li>
-                    <li class="active"><a href="faq.html">Installation</a></li>
+                    <li class="active"><a href="index.html">Main Page</a></li>
+                    <li><a href="faq.html">Installation</a></li>
                     <li><a href="mods.html">Modifications</a></li>
                 </ul>
 
@@ -21,8 +23,16 @@
                     <li><a href="https://discord.gg/XetGPze2ve">Discord Server</a></li>
                     <li><a href="https://github.com/ItzVladik/source-engine">Source Engine Mods Repository</a></li>
                 </ul> 
+
+                <ul class="sidenav grey darken-4" id="mobile-demo">
+                    <li class="white-text"><a href="index.html">Main Page</a></li>
+                    <li><a href="faq.html">Installation</a></li>
+                    <li><a href="mods.html">Modifications</a></li>
+                    <li><a href="https://discord.gg/XetGPze2ve">Discord Server</a></li>
+                    <li><a href="https://github.com/ItzVladik/source-engine">Source Engine Mods Repository</a></li>
+                </ul>
             </div>
-        </nav>
+        </nav> 
         
         <h1>Installation</h1>
             <h5>Learn how to install Source Engine and mods for it.</h5>
@@ -77,5 +87,12 @@
                         <a href="mods.html" target="_blank" rel="noopener noreferrer" class="waves-effect waves-light blue darken-2 btn"><span>Download Modifications</span></a>
                     </div>
             </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var elems = document.querySelectorAll('.sidenav');
+            var instances = M.Sidenav.init(elems);
+        });
+    </script>
 </body>
 </html> 
