--- a/mods.html
+++ b/mods.html
@@ -14,9 +14,9 @@
             <div class="nav-wrapper grey darken-4">
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li class="active"><a href="index.html">Main Page</a></li>
+                    <li><a href="index.html">Main Page</a></li>
                     <li><a href="faq.html">Installation</a></li>
-                    <li><a href="mods.html">Modifications</a></li>
+                    <li class="active"><a href="mods.html">Modifications</a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
