--- a/faq.html
+++ b/faq.html
@@ -81,7 +81,7 @@
                             <li>If the mod information describes installing patches or touch, then be sure to do so.</li>
                             <li>Try to laucnh and play!</li>
                             <p style="margin: 1.6em 20px;"></p>
-                            <b>If you find a bug, please report it in the source engine mods repository, the link is in the top right corner, or go to our Discord server and report it in the bug reports channel.</b>
+                            <b>If you find a bug, please report it in the source engine mods repository or go to our Discord server and report it in the bug reports channel.</b>
                         </font>
                         </ol>
                         <a href="mods.html" target="_blank" rel="noopener noreferrer" class="waves-effect waves-light blue darken-2 btn"><span>Download Modifications</span></a>
