--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <p>To download mods, go to <b>Installation</b> page and read how to install mods.</p>
                             <p>Installation guides and patches for Valve games by <b>Aru Moon.</b></p>
                             <p>The site was created by <b>ItzVladik</b> using <b>Materialize CSS.</b></p>
-                            <p>If you have any questions, you can visit our Discord server using the link in the top right corner.</p>
+                            <p>If you have any questions, you can visit our Discord server.</p>
                         </font>
                     </div>
                 </div>
